# AC215_HARV

./: .env.example  .gitignore  .markdown-link-check.json  .testing-infrastructure-summary.md  DEPLOYMENT.md  EVIDENCE.md  FACE_RECOGNITION_SETUP.md  GCP_QUICK_START.md  GOOGLE_API_SETUP_SUMMARY.md  MIGRATION_SUMMARY.md  MOBILE_QUICKSTART.md  Makefile  README.md  REPO_INVENTORY.md  SETUP_DEPENDENCIES.md  TESTING.md  TESTING_FIXES_APPLIED.md  TESTING_QUICKSTART.md  VERIFICATION.md  docker-compose.yml  dvc.yaml  package-lock.json  params.yaml  pyproject.toml  pytest.ini  requirements-local.txt  requirements-test.txt
.github/workflows/: ci.yml  deploy.yml
archive/: IMPLEMENTATION_COMPLETE.md  MILESTONE2_SUBMISSION_CHECKLIST.md  README.md  REFACTOR_SUMMARY.md
artifacts/metrics/: harv_cnn_v1.json
backend/: Dockerfile  __init__.py
backend/app/: __init__.py  database.py  main.py
backend/app/api/: deps.py
backend/app/config/: settings.py
backend/app/models/: attendance.py
backend/app/services/: gps.py  (+2 more)
backend/ml/: model_loader.py
backend/tests/: conftest.py
dashboard/: Dockerfile
dashboard/app/: app.py  gps_verify.html
data/sample_input/: README.md  manifest.csv
docs/: ARCHITECTURE.md  DECISIONS.md  MOBILE_APP.md  RUNBOOK.md  application_design.md  ci_evidence.md  data_versioning.md  google_geolocation_setup.md  gps_location_guide.md  model_results.md  model_training_summary.md  pipeline.md  testing.md
docs/evidence/: inference_examples.md  metrics.json  train_log_snippet.txt
evaluate/: pyproject.toml
evaluate/src/: evaluate.py
export/: Dockerfile  pyproject.toml
export/src/: export.py
frontend/: .env.sample  .eslintrc.js  Dockerfile  IMPLEMENTATION_SUMMARY.md  MOBILE_UPDATES.md  README.md  TROUBLESHOOTING.md  app.config.js  app.json  babel.config.js  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
frontend/app/: _layout.tsx  index.tsx
frontend/assets/: .gitkeep
frontend/config/: locations.ts
frontend/e2e/: basic.spec.ts
frontend/src/: App.tsx  api.ts
frontend/utils/: api.ts  constants.ts  logger.ts  store.ts
infra/: .gitignore  Pulumi.yaml  index.ts  kubeconfig.yaml  package-lock.json  package.json  setup.md  tsconfig.json
ingestion/: README.md  pyproject.toml
ingestion/src/: ingest.py
legacy/dashboard/: pyproject.toml
ml/: __init__.py  train_cnn.py
ml/configs/: harv_vision_v1.yaml
mobile/: .gitignore  IMPLEMENTATION_SUMMARY.md  MACOS_SETUP.md  MOBILE_UPDATES.md  README.md  TROUBLESHOOTING.md  app.config.js  package-lock.json  package.json  start-expo.sh
mobile/app/: _layout.tsx  index.tsx
mobile/data/: classroomCatalog.ts
mobile/utils/: api.ts  constants.ts
models/harv_cnn_v1/: metadata.json
outputs/: README.md
outputs/samples/: README.md  example_metrics.json  example_prediction.json
preprocess/: README.md  pyproject.toml
preprocess/src/: preprocess.py
scripts/: check_dataset.py  deploy_to_gcp.sh  download_kaggle_faces.py  download_real_faces.py  export_evidence.sh  fine_tune_blurry_faces.py  make_tiny_images.py  run_tests.sh  setup_gcp.sh  setup_real_faces.py  simple_face_setup.py  test_google_api.sh  test_setup.py  upload_artifacts.sh  validate_setup.sh  wait_for_services.sh
serve/: Dockerfile.cloudrun  pyproject.toml
serve/src/: app.py  database.py  geo.py  postprocess.py  pretrained_classrooms.py  pretrained_classrooms_data.json
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_api.py  test_artifacts.py  test_google_api.py
tests/load/: README.md  load_test.js
tests/unit/: test_geo.py  test_image_utils.py  test_params.py
train/: Dockerfile  README.md  __init__.py  pipeline.py  pyproject.toml
train/src/: train.py
(+37 files in other folders)
