[project]
name = "harv"
version = "0.2.0"
description = "Harvard Attendance Recognition and Verification - ML Pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "HARV Team"},
]
keywords = ["machine-learning", "computer-vision", "face-recognition", "transfer-learning"]

dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "opencv-python>=4.9.0",
    "pillow>=10.2.0",
    "numpy>=1.24.3",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["archive", ".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EXE", # flake8-executable
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "T20",    # Print statements allowed for pipeline logging
    "G004",   # Logging f-string allowed
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20", "S101"]  # Allow prints and asserts in tests
"scripts/*" = ["T20"]         # Allow prints in scripts

[tool.ruff.lint.isort]
known-first-party = ["src"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "archive"

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "PIL.*",
    "torch.*",
    "torchvision.*",
    "sklearn.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-q",
    "--disable-warnings",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:evidence/coverage/html",
    "--cov-report=xml:evidence/coverage/coverage.xml",
]
markers = [
    "unit: Fast, isolated unit tests",
    "integration: Integration tests requiring services",
    "e2e: End-to-end workflow tests",
    "slow: Slow-running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["src", "ingestion/src", "preprocess/src", "train/src", "serve/src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "evidence/coverage/html"

[tool.coverage.xml]
output = "evidence/coverage/coverage.xml"
